# Glyph

./: CMakeLists.txt  README.md  buildWindows.bat
docs/Project/: TODO.md
src/: CMakeLists.txt  backup.cpp  buildWindows.bat  glyph.h  main.cpp
src/Renderer/: glyphRenderer.cpp  glyphRenderer.h
src/compiler/: mdtransform.cpp  mdtransform.h
src/core/: command.cpp  command.h  infra.cpp  infra.h  version.cpp  version.h
src/resources/: test.md
testing/: TODO.md
testing/html/: test1.html  testdoc1.html
web/base/: main.css
web/scripts/: glypthLeftNav.js
